# Prague-Airport-MCP

./: LICENSE  README.md
test/: README.md  pyproject.toml
test/.github/: copilot-instructions.md
test/src/prague_airport_mcp/: server.py
